--- a/css/styles.css
+++ b/css/styles.css
@@ -816,3 +816,20 @@ footer {
 .fc-event:hover {
     transform: scale(1.05);
 }
+
+/* Voeg dit toe aan styles.css */
+.main-nav a.active {
+    color: var(--primary-color);
+    background-color: rgba(249, 115, 22, 0.1);
+    position: relative;
+}
+
+.main-nav a.active::after {
+    content: '';
+    position: absolute;
+    bottom: -4px; /* Pas deze waarde aan indien nodig */
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: var(--primary-color);
+}
